fixed text-align bug

--- a/style/index.css
+++ b/style/index.css
@@ -50,7 +50,7 @@ i{
     margin: 0;
     max-width:100%;
   /*put a border around everything to see where it stops and starts*/
-    /* border:1px solid orangered; */
+    border:1px solid orangered;
 }
 
 /* Header styling */
@@ -141,7 +141,7 @@ body{
     margin-bottom: 2rem;
 }
 
-.hero_passage{
+.hero_passage h3{
     text-align: left;
     /* font-size: 2; */
 }
@@ -249,7 +249,7 @@ footer{
         
     }
 
-    .hero_passage{
+    .hero_passage h3{
         text-align: center;
     }
 
